--- a/report-adulto.html
+++ b/report-adulto.html
@@ -75,25 +75,13 @@
 
                     <!-- cabecera 1 -->
                     <div class="row border-bottom">
-                        <h3 class="font-weight-bold d-none d-sm-flex "> Información General </h3>
-                        <h4 class="font-weight-bold d-flex d-sm-none "> Información General </h4>
+                        <h3 class="font-weight-bold d-none d-sm-flex "> Reporte de Turno de Vacunación contra COVID - 19 </h3>
+                        <h4 class="font-weight-bold d-flex d-sm-none "> Reporte de Turno de Vacunación contra COVID - 19 </h4>
                     </div>
                     <!-- Informacion General -->
                     <div class="accordion-item__container mt-4 ">
                         <table class="table" style="font-size: 15px">
                             <tbody>
-
-                                <tr>
-                                    <td class="text-center">
-                                        <i class="fa fa-calendar"></i>
-                                    </td>
-                                    <td>
-                                        <strong>FECHA DE VACUNACIÓN</strong>
-                                    </td>
-                                    <td>
-                                        <span>13/08/2021</span>
-                                    </td>
-                                </tr>
 
                                 <tr>
                                     <td class="text-center">
@@ -124,10 +112,10 @@
                                         <i class="fa fa-map-marker"></i>
                                     </td>
                                     <td>
-                                        <strong>DEPARTAMENTO/PROVINCIA/DISTRITO</strong>
+                                        <strong>DEPARTAMENTO</strong>
                                     </td>
                                     <td>
-                                        LIMA / LIMA / COMAS
+                                        LIMA
                                     </td>
                                 </tr>
 
@@ -136,13 +124,37 @@
                                         <i class="fa fa-map-marker"></i>
                                     </td>
                                     <td>
-                                        <strong>DIRECCIÓN</strong>
+                                        <strong>PROVINCIA</strong>
                                     </td>
                                     <td>
-                                        AV. BRASIL 366
+                                        LIMA
                                     </td>
                                 </tr>
 
+                                <tr>
+                                    <td class="text-center">
+                                        <i class="fa fa-map-marker"></i>
+                                    </td>
+                                    <td>
+                                        <strong>DISTRITO</strong>
+                                    </td>
+                                    <td>
+                                        COMAS
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td class="text-center">
+                                        <i class="fa fa-calendar"></i>
+                                    </td>
+                                    <td>
+                                        <strong>FECHA DE VACUNACIÓN</strong>
+                                    </td>
+                                    <td>
+                                        <span>13/08/2021</span>
+                                    </td>
+                                </tr>
+                                
                                 <tr>
                                     <td class="text-center">
                                         <i class="fa fa-clock"></i>
