--- a/report-militar.html
+++ b/report-militar.html
@@ -21,10 +21,12 @@
     <nav class=" navbar navbar-dark navbar-expand-sm text-light bg-primary">
         <div class="container">
             <a href="#" class="navbar-brand">
-                <img class="d-none figure-img rounded-circle border-dark shadow d-lg-inline-flex " height="75px" src="Img/perfil-vacio.webp" alt="">
+                <img class="d-none figure-img rounded-circle border-dark shadow d-lg-inline-flex " height="75px"
+                    src="Img/perfil-vacio.webp" alt="">
                 <h3 class="d-none d-lg-inline-flex ml-3">Nombre Apellido</h3>
 
-                <img class="d-lg-none figure-img rounded-circle border-dark shadow d-inline-flex" height="50px" src="Img/perfil-vacio.webp" alt="">
+                <img class="d-lg-none figure-img rounded-circle border-dark shadow d-inline-flex" height="50px"
+                    src="Img/perfil-vacio.webp" alt="">
                 <h4 class="d-lg-none d-inline-flex ml-3">Nombre Apellido</h4>
             </a>
             <div class="d-none d-lg-flex col-lg-4 my-auto">
@@ -36,7 +38,8 @@
     </nav>
     <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom bg-tercero">
         <div class="col-lg-12 d-inline-flex">
-            <button class="d-inline-flex d-lg-none btn btn-primary h-50 my-auto" id="menu-toggle"> <i class=" p-1 fas fa-lg fa-bars"></i></button>
+            <button class="d-inline-flex d-lg-none btn btn-primary h-50 my-auto" id="menu-toggle"> <i
+                    class=" p-1 fas fa-lg fa-bars"></i></button>
             <h3 class="font-weight-bold text-white col-4 mt-2 d-none d-sm-flex"> Militar </h3>
             <h4 class="font-weight-bold text-white col-4 mt-2 d-flex d-sm-none"> Militar </h4>
         </div>
@@ -48,14 +51,15 @@
         <div class="bg-light border-right" id="sidebar-wrapper">
             <div class="sidebar-heading h4">MENÚ DE OPCIONES</div>
             <div class="list-group list-group-flush d-inline-flex align-items-center">
-                <a href="PanelPM.html" class="list-group-item list-group-item-action bg-light ">
-                    <i class="fas fa-user"></i> Información Personal y Turnos</a>
                 <a href="#" class="list-group-item list-group-item-action bg-light disabled font-weight-bolder">
                     <i class="fas fa-question"></i> Consultar fecha de Vacunación</a>
                 <a href="#" class="list-group-item list-group-item-action bg-light">
                     <i class="fas fa-file-signature"></i> Solicitar cambio de turno</a>
+                <a href="#" class="list-group-item list-group-item-action bg-light ">
+                    <i class="fas fa-download"></i> Descargar</a>
                 <a href="seleccion_Usuario.html" class="list-group-item list-group-item-action bg-light">
                     <i class="fas fa-sign-out-alt"></i> Salir</a>
+
             </div>
         </div>
         <!-- /#sidebar-wrapper -->
@@ -64,88 +68,168 @@
         <div id="page-content-wrapper">
 
             <div class="container ">
+                <div class="row m-2">
 
-                <div class="col-12 ">
-                    <div class="row mt-4">
 
-                        <h3 class="font-weight-bold d-none d-sm-flex"> Reporte de Turno de Vacunación contra COVID - 19 </h3>
-                        <h4 class="font-weight-bold d-flex d-sm-none"> Reporte de Turno de Vacunación contra COVID - 19 </h4>
-                        <table class="table table-bordered mt-4">
-                            <tbody>
-                                <tr>
-                                    <th scope="row">Fecha de vacunación</th>
-                                    <td>13/02/2021</td>
-                                </tr>
+                    <div class="col-12 ">
 
-                                <tr>
-                                    <th scope="row">Lugar de vacunación</th>
-                                    <td>Hospital Aquiles Matto</td>
-                                </tr>
+                        <!-- cabecera 1 -->
+                        <div class="row border-bottom">
+                            <h3 class="font-weight-bold d-none d-sm-flex "> Reporte de Turno de Vacunación contra COVID
+                                - 19 </h3>
+                            <h4 class="font-weight-bold d-flex d-sm-none "> Reporte de Turno de Vacunación contra COVID
+                                - 19 </h4>
+                        </div>
+                        <!-- Reporte -->
+                        <div class="accordion-item__container mt-4 ">
+                            <table class="table" style="font-size: 15px">
+                                <tbody>
 
-                                <tr>
-                                    <th scope="row">Pabellón</th>
-                                    <td>5 C</td>
-                                </tr>
+                                    <tr>
+                                        <td class="text-center">
+                                            <i class="fa fa-hospital"></i>
+                                        </td>
+                                        <td>
+                                            <strong>LUGAR DE VACUNACIÓN</strong>
+                                        </td>
+                                        <td>
+                                            HOSPITAL AQUILES MATO
+                                        </td>
+                                    </tr>
 
-                                <tr>
-                                    <th scope="row">Horario de atención</th>
-                                    <td>8:00 - 10:00 a.m</td>
-                                </tr>
-                            </tbody>
-                        </table>
+                                    <tr>
+                                        <td class="text-center">
+                                            <i class="fa fa-hospital"></i>
+                                        </td>
+                                        <td>
+                                            <strong>PABELLÓN</strong>
+                                        </td>
+                                        <td>
+                                            5C
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td class="text-center">
+                                            <i class="fa fa-map-marker"></i>
+                                        </td>
+                                        <td>
+                                            <strong>DEPARTAMENTO</strong>
+                                        </td>
+                                        <td>
+                                            LIMA
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td class="text-center">
+                                            <i class="fa fa-map-marker"></i>
+                                        </td>
+                                        <td>
+                                            <strong>PROVINCIA</strong>
+                                        </td>
+                                        <td>
+                                            LIMA
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td class="text-center">
+                                            <i class="fa fa-map-marker"></i>
+                                        </td>
+                                        <td>
+                                            <strong>DISTRITO</strong>
+                                        </td>
+                                        <td>
+                                            COMAS
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td class="text-center">
+                                            <i class="fa fa-calendar"></i>
+                                        </td>
+                                        <td>
+                                            <strong>FECHA DE VACUNACIÓN</strong>
+                                        </td>
+                                        <td>
+                                            <span>13/08/2021</span>
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td class="text-center">
+                                            <i class="fa fa-clock"></i>
+                                        </td>
+                                        <td>
+                                            <strong>HORARIO DE ATENCIÓN</strong>
+                                        </td>
+                                        <td>
+                                            <span>8:00-12:00</span>
+                                        </td>
+                                    </tr>
+
+                                </tbody>
+                            </table>
+                        </div>
 
                     </div>
-
-
-
-
                 </div>
+                <div class="row m-2">
 
 
-                <div class="container mt-4 mb-3 text-center">
-                    <h5 class="h1 text-danger">AL ASISTIR A TU CENTRO DE VACUNACIÓN <br> ¡NO TE OLVIDES!</h5>
+                    <div class="col-12 ">
 
-                    <div class="row text-center d-inline-flex">
+                        <!-- cabecera 2 -->
+                        <div class="row border-bottom">
+                            <h3 class="font-weight-bold d-none d-sm-flex "> Recomendaciones</h3>
+                            <h4 class="font-weight-bold d-flex d-sm-none "> Recomendaciones</h4>
+                        </div>
+                        <div class="container mt-4 mb-3 text-center">
+                            <h5 class="h1 text-danger">AL ASISTIR A TU CENTRO DE VACUNACIÓN <br> ¡NO TE OLVIDES!</h5>
 
-                        <div class="col-sm-6 col-lg-4 ">
-                            <div class="card h-100">
-                                <div class="card-header">
-                                    <h5 class="card-title"> LLEVAR TU DNI</h5>
+                            <div class="row text-center d-inline-flex">
+
+                                <div class="col-sm-6 col-lg-4 ">
+                                    <div class="card h-100">
+                                        <div class="card-header">
+                                            <h5 class="card-title"> LLEVAR TU DNI</h5>
+                                        </div>
+                                        <div class="card-body">
+                                            <img src="Img/dni.jpg" class="img-fluid" alt="">
+                                        </div>
+
+                                    </div>
                                 </div>
-                                <div class="card-body">
-                                    <img src="Img/dni.jpg" class="img-fluid" alt="">
+
+                                <div class="col-sm-6 col-lg-4">
+                                    <div class="card h-100">
+                                        <div class="card-header">
+                                            <h5 class="card-title"> DISTANCIA FÍSICA</h5>
+                                        </div>
+                                        <div class="card-body">
+                                            <img src="Img/distanciamiento.png" class="img-fluid" alt="">
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-4">
+                                    <div class="card h-100">
+                                        <div class="card-header">
+                                            <h5 class="card-title"> USAR MASCARILLA</h5>
+                                        </div>
+                                        <div class="card-body">
+                                            <img src="Img/mascarillas.png" class="img-fluid" alt="">
+                                        </div>
+
+                                    </div>
                                 </div>
 
                             </div>
                         </div>
-
-                        <div class="col-sm-6 col-lg-4">
-                            <div class="card h-100">
-                                <div class="card-header">
-                                    <h5 class="card-title"> DISTANCIA FÍSICA</h5>
-                                </div>
-                                <div class="card-body">
-                                    <img src="Img/distanciamiento.png" class="img-fluid" alt="">
-                                </div>
-
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4">
-                            <div class="card h-100">
-                                <div class="card-header">
-                                    <h5 class="card-title"> USAR MASCARILLA</h5>
-                                </div>
-                                <div class="card-body">
-                                    <img src="Img/mascarillas.png" class="img-fluid" alt="">
-                                </div>
-
-                            </div>
-                        </div>
-
                     </div>
                 </div>
-
 
             </div>
         </div>
@@ -167,7 +251,7 @@
     <script src="js/bootstrap.min.js "></script>
     <script src="js/popper.min.js "></script>
     <script>
-        $("#menu-toggle").click(function(e) {
+        $("#menu-toggle").click(function (e) {
             e.preventDefault();
             $("#wrapper").toggleClass("toggled");
         });
