--- a/form-medico.html
+++ b/form-medico.html
@@ -128,41 +128,47 @@
                     </div>
                     <!-- Fila 2 -->
                     <div class="row mt-4">
-                        <div class="col-5 mr-2">
+                        <div class="col-4 mr-2">
                             <div class="row">
-                                   <p>Departamento: </p>
+                                   <p>DNI: </p>
                             </div>
                             <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="Departamneto"
+                                <input type="text" class="form-control form-control-lg" placeholder="Numero DNI"
                                 aria-describedby="inputGroupPrepend1"required>
                             </div>
                         </div>
-                        <div class="col-5">
+                        <div class="col-2 mr-2">
                             <div class="row">
-                                   <p>Provincia: </p>
+                                   <p>CUI: </p>
                             </div>
                             <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="Provincia"
-                                aria-describedby="inputGroupPrepend1"required>
-                            </div>
-                        </div>                   
-                    </div>
-                    <!-- Fila 3 -->
-                    <div class="row mt-4">
-                        <div class="col-10">
-                            <div class="row">
-                                   <p>Dirección: </p>
-                            </div>
-                            <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="Calle, Jiron o Avenida"
+                                <input type="text" class="form-control form-control-lg" placeholder="CUI"
                                 aria-describedby="inputGroupPrepend1"required>
                             </div>
                         </div>
+                        <div class="col-4">
+                            <div class="row">
+                                   <p>Fecha de emisión: </p>
+                            </div>
+                            <div class="row">
+                                <input type="text" class="form-control form-control-lg" placeholder="dd/mm/aaaa"
+                                aria-describedby="inputGroupPrepend1"required>
+                            </div>
+                        </div>                    
                     </div>
 
                     <!-- Fila 4 -->
                     <div class="row mt-4">
-                        <div class="col-4 mr-2">
+                        <div class="col-5 mr-2">
+                            <div class="row">
+                                   <p>Número de celular: </p>
+                            </div>
+                            <div class="row">
+                                <input type="text" class="form-control form-control-lg" placeholder="Número de celular"
+                                aria-describedby="inputGroupPrepend1"required>
+                            </div>
+                        </div>
+                        <div class="col-5 mr-2">
                             <div class="row">
                                    <p>Número colegiatura: </p>
                             </div>
@@ -170,50 +176,18 @@
                                 <input type="text" class="form-control form-control-lg" placeholder="Número colegiatura"
                                 aria-describedby="inputGroupPrepend1"required>
                             </div>
-                        </div>
-                        <div class="col-6 ">
-                            <div class="row">
-                                   <p>Cargo: </p>
-                            </div>
-                            <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="Cargo"
-                                aria-describedby="inputGroupPrepend1"required>
-                            </div>
-                        </div>
+                        </div>                        
                     </div>
                 </div>
 
-                <div class="col-12 mb-4">
+                <div class="col-12 mt-5 mb-4">
                     <!-- cabecera -->
                     <div class="row mt-4 border-bottom">
                         <h3 class="font-weight-bold d-none d-sm-flex "> Asignación de Turno a Personal Médico </h3>
                         <h4 class="font-weight-bold d-flex d-sm-none "> Asignación de Turno a Personal Médico </h4>
                     </div>
-                    <!-- Formulario -->
+                    <!-- Formulario -->                    
                     <!-- Fila 1 -->
-                    <div class="row mt-4">
-
-                            <div class="col-6 mr-2">
-                                <div class="row">
-                                       <p>Fecha: </p>
-                                </div>
-                                <div class="row">
-                                    <input type="text" class="form-control form-control-lg" placeholder="dd/mm/aaaa"
-                                    aria-describedby="inputGroupPrepend1"required>
-                                </div>
-                            </div>
-
-                            <div class="col-4">
-                                <div class="row">
-                                       <p>Turno: </p>
-                                </div>
-                                <div class="row">
-                                    <input type="text" class="form-control form-control-lg" placeholder="Número de Turno"
-                                    aria-describedby="inputGroupPrepend1"required>
-                                </div>
-                            </div>
-                    </div>
-                    <!-- Fila 2 -->
                     <div class="row mt-4">
                         <div class="col-3 mr-2">
                             <div class="row">
@@ -244,20 +218,20 @@
                         </div>
                     
                     </div>
-                    <!-- Fila 3 -->
+                    <!-- Fila 2 -->
                     <div class="row mt-4">
                         <div class="col-10">
                             <div class="row">
-                                   <p>Dirección: </p>
+                                   <p>Centro de Salud: </p>
                             </div>
                             <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="Calle, Jirón o Avenida"
+                                <input type="text" class="form-control form-control-lg" placeholder="Nombre de centro de Salud"
                                 aria-describedby="inputGroupPrepend1"required>
                             </div>
                         </div>
                     </div>
 
-                    <!-- Fila 4 -->
+                    <!-- Fila 3 -->
                     <div class="row mt-4">
                         <div class="col-4 mr-2">
                             <div class="row">
@@ -268,16 +242,25 @@
                                 aria-describedby="inputGroupPrepend1"required>
                             </div>
                         </div>
-                        <div class="col-6 ">
+                        <div class="col-3 mr-2">
                             <div class="row">
-                                   <p>Código de Institución: </p>
+                                   <p>Horario de pabellón: </p>
                             </div>
                             <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="código institución"
+                                <input type="text" class="form-control form-control-lg" placeholder="Horario de pabellón"
                                 aria-describedby="inputGroupPrepend1"required>
                             </div>
                         </div>
-                    </div>
+                        <div class="col-3 ">
+                            <div class="row">
+                                   <p>Turno: </p>
+                            </div>
+                            <div class="row">
+                                <input type="text" class="form-control form-control-lg" placeholder="Turno"
+                                aria-describedby="inputGroupPrepend1"required>
+                            </div>
+                        </div>
+                    </div>                    
                 </div>
             </div>
 
