--- a/form-militar.html
+++ b/form-militar.html
@@ -23,10 +23,10 @@
         <div class="container">
             <a href="#" class="navbar-brand">
                 <img class="d-none figure-img rounded-circle border-dark shadow d-lg-inline-flex " height="75px" src="Img/perfil-vacio.webp" alt="">
-                <h3 class="d-none d-lg-inline-flex ml-3">Nombre Apellido</h3>
+                <h3 class="d-none d-lg-inline-flex ml-3">Administrador</h3>
 
                 <img class="d-lg-none figure-img rounded-circle border-dark shadow d-inline-flex" height="50px" src="Img/perfil-vacio.webp" alt="">
-                <h4 class="d-lg-none d-inline-flex ml-3">Nombre Apellido</h4>
+                <h4 class="d-lg-none d-inline-flex ml-3">Administrador</h4>
             </a>
             <div class="d-none d-lg-flex col-lg-4 my-auto">
                 <a href="https://www.gob.pe/minsa/">
@@ -40,8 +40,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom bg-tercero">
         <div class="col-lg-12 d-inline-flex">
             <button class="d-inline-flex d-lg-none btn btn-primary h-50 my-auto" id="menu-toggle"> <i class=" p-1 fas fa-lg fa-bars"></i></button>
-            <h3 class="font-weight-bold text-white col-4 mt-2 d-none d-sm-flex"> Militar</h3>
-            <h4 class="font-weight-bold text-white col-4 mt-2 d-flex d-sm-none"> Militar</h4>
+            <h3 class="font-weight-bold text-white col-4 mt-2 d-none d-sm-flex"> Administrador</h3>
+            <h4 class="font-weight-bold text-white col-4 mt-2 d-flex d-sm-none"> Administrador </h4>
         </div>
     </nav>
 
@@ -67,13 +67,13 @@
                     <div class="col-10">Consultar fecha de Vacunación</div>
                     </div>
                 </a>
-                <!-- Consultar fecha de vacunacion -->
+                <!-- Cambio de turno
                 <a href="#" class="list-group-item list-group-item-action bg-light">
                     <div class="row">
                     <div class="col-2"><i class="fas fa-file-signature"></i></div>
                     <div class="col-10">Solicitar cambio de turno</div>
                     </div>
-                </a>
+                </a>-->
 
                 <!-- Registrar Personal de vacunación -->
                 <a href="#" class="list-group-item list-group-item-action bg-light disabled font-weight-bolder">
@@ -106,124 +106,88 @@
                     <!-- Fila 1 -->
                     <div class="row mt-4">
 
-                            <div class="col-6 mr-2">
+                            <div class="col-5 mr-2">
                                 <div class="row">
-                                       <p>Nombre completo: </p>
+                                       <p>Nombres:</p>
                                 </div>
                                 <div class="row">
-                                    <input type="text" class="form-control form-control-lg" placeholder="Nombre y Apellidos"
+                                    <input type="text" class="form-control form-control-lg" placeholder="Nombres"
                                     aria-describedby="inputGroupPrepend1"required>
                                 </div>
                             </div>
 
-                            <div class="col-4">
+                            <div class="col-5">
                                 <div class="row">
-                                       <p>DNI: </p>
+                                       <p>Apellidos: </p>
                                 </div>
                                 <div class="row">
-                                    <input type="text" class="form-control form-control-lg" placeholder="Número DNI"
+                                    <input type="text" class="form-control form-control-lg" placeholder="Apellidos"
                                     aria-describedby="inputGroupPrepend1"required>
                                 </div>
                             </div>
                     </div>
                     <!-- Fila 2 -->
-                    <div class="row mt-4">
-                        <div class="col-3 mr-2">
-                            <div class="row">
-                                   <p>Departamento: </p>
-                            </div>
-                            <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="Departamneto"
-                                aria-describedby="inputGroupPrepend1"required>
-                            </div>
-                        </div>
-                        <div class="col-3 mr-2">
-                            <div class="row">
-                                   <p>Provincia: </p>
-                            </div>
-                            <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="Provincia"
-                                aria-describedby="inputGroupPrepend1"required>
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <div class="row">
-                                   <p>Distrito: </p>
-                            </div>
-                            <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="Distrito"
-                                aria-describedby="inputGroupPrepend1"required>  
-                            </div>
-                        </div>
-                    
-                    </div>
-                    <!-- Fila 3 -->
-                    <div class="row mt-4">
-                        <div class="col-10">
-                            <div class="row">
-                                   <p>Dirección: </p>
-                            </div>
-                            <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="Calle, Jirón o Avenida"
-                                aria-describedby="inputGroupPrepend1"required>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Fila 4 -->
                     <div class="row mt-4">
                         <div class="col-4 mr-2">
                             <div class="row">
-                                   <p>Carnet militar: </p>
+                                   <p>DNI: </p>
                             </div>
                             <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="Número de carnet militar"
+                                <input type="text" class="form-control form-control-lg" placeholder="Numero DNI"
                                 aria-describedby="inputGroupPrepend1"required>
                             </div>
                         </div>
-                        <div class="col-6 ">
+                        <div class="col-2 mr-2">
                             <div class="row">
-                                   <p>Rango: </p>
+                                   <p>CUI: </p>
                             </div>
                             <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="Rango"
+                                <input type="text" class="form-control form-control-lg" placeholder="CUI"
                                 aria-describedby="inputGroupPrepend1"required>
                             </div>
                         </div>
+                        <div class="col-4">
+                            <div class="row">
+                                   <p>Fecha de emisión: </p>
+                            </div>
+                            <div class="row">
+                                <input type="text" class="form-control form-control-lg" placeholder="dd/mm/aaaa"
+                                aria-describedby="inputGroupPrepend1"required>
+                            </div>
+                        </div>                    
+                    </div>
+
+                    <!-- Fila 4 -->
+                    <div class="row mt-4">
+                        <div class="col-5 mr-2">
+                            <div class="row">
+                                   <p>Número de celular: </p>
+                            </div>
+                            <div class="row">
+                                <input type="text" class="form-control form-control-lg" placeholder="Número de celular"
+                                aria-describedby="inputGroupPrepend1"required>
+                            </div>
+                        </div>
+                        <div class="col-5 mr-2">
+                            <div class="row">
+                                   <p>Número de varnet militar: </p>
+                            </div>
+                            <div class="row">
+                                <input type="text" class="form-control form-control-lg" placeholder="Número colegiatura"
+                                aria-describedby="inputGroupPrepend1"required>
+                            </div>
+                        </div>                        
                     </div>
                 </div>
 
-                <div class="col-12 mb-4">
+                <div class="col-12 mt-5 mb-4">
                     <!-- cabecera -->
                     <div class="row mt-4 border-bottom">
-                        <h3 class="font-weight-bold d-none d-sm-flex "> Asignación de Turno a Militar </h3>
+                        <h3 class="font-weight-bold d-none d-sm-flex "> Asignación de Turno a Militar</h3>
                         <h4 class="font-weight-bold d-flex d-sm-none "> Asignación de Turno a Militar </h4>
                     </div>
-                    <!-- Formulario -->
+                    <!-- Formulario -->                    
                     <!-- Fila 1 -->
-                    <div class="row mt-4">
-
-                            <div class="col-6 mr-2">
-                                <div class="row">
-                                       <p>Fecha: </p>
-                                </div>
-                                <div class="row">
-                                    <input type="text" class="form-control form-control-lg" placeholder="dd/mm/aaaa"
-                                    aria-describedby="inputGroupPrepend1"required>
-                                </div>
-                            </div>
-
-                            <div class="col-4">
-                                <div class="row">
-                                       <p>Turno: </p>
-                                </div>
-                                <div class="row">
-                                    <input type="text" class="form-control form-control-lg" placeholder="Número de Turno"
-                                    aria-describedby="inputGroupPrepend1"required>
-                                </div>
-                            </div>
-                    </div>
-                    <!-- Fila 2 -->
                     <div class="row mt-4">
                         <div class="col-3 mr-2">
                             <div class="row">
@@ -254,40 +218,49 @@
                         </div>
                     
                     </div>
-                    <!-- Fila 3 -->
+                    <!-- Fila 2 -->
                     <div class="row mt-4">
                         <div class="col-10">
                             <div class="row">
-                                   <p>Dirección: </p>
+                                   <p>Centro de Salud: </p>
                             </div>
                             <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="Calle, Jirón o Avenida"
+                                <input type="text" class="form-control form-control-lg" placeholder="Nombre de centro de Salud"
                                 aria-describedby="inputGroupPrepend1"required>
                             </div>
                         </div>
                     </div>
 
-                    <!-- Fila 4 -->
+                    <!-- Fila 3 -->
                     <div class="row mt-4">
                         <div class="col-4 mr-2">
                             <div class="row">
                                    <p>Pabellón: </p>
                             </div>
                             <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="Pabellón"
+                                <input type="text" class="form-control form-control-lg" placeholder="Pabellón "
                                 aria-describedby="inputGroupPrepend1"required>
                             </div>
                         </div>
-                        <div class="col-6 ">
+                        <div class="col-3 mr-2">
                             <div class="row">
-                                   <p>Código Institución: </p>
+                                   <p>Horario de pabellón: </p>
                             </div>
                             <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="código institución"
+                                <input type="text" class="form-control form-control-lg" placeholder="Horario de pabellón"
                                 aria-describedby="inputGroupPrepend1"required>
                             </div>
                         </div>
-                    </div>
+                        <div class="col-3 ">
+                            <div class="row">
+                                   <p>Turno: </p>
+                            </div>
+                            <div class="row">
+                                <input type="text" class="form-control form-control-lg" placeholder="Turno"
+                                aria-describedby="inputGroupPrepend1"required>
+                            </div>
+                        </div>
+                    </div>                    
                 </div>
             </div>
 
