--- a/form-militar.html
+++ b/form-militar.html
@@ -170,7 +170,7 @@
                         </div>
                         <div class="col-5 mr-2">
                             <div class="row">
-                                   <p>Número de varnet militar: </p>
+                                   <p>Número de carnet militar: </p>
                             </div>
                             <div class="row">
                                 <input type="text" class="form-control form-control-lg" placeholder="Número colegiatura"
