--- a/report-adulto.html
+++ b/report-adulto.html
@@ -49,19 +49,41 @@
 
         <!-- Sidebar -->
         <div class="bg-light border-right" id="sidebar-wrapper">
-            <div class="sidebar-heading h4">MENÚ DE OPCIONES</div>
+            <div class="sidebar-heading h4 text-secundario">MENÚ DE OPCIONES</div>
             <div class="list-group list-group-flush d-inline-flex align-items-center">
-                <a href="#" class="list-group-item list-group-item-action bg-light disabled font-weight-bolder">
-                    <i class="fas fa-question"></i> Consultar fecha de Vacunación</a>
-                <a href="#" class="list-group-item list-group-item-action bg-light">
-                    <i class="fas fa-file-signature"></i> Solicitar cambio de turno</a>
-                <a href="#" class="list-group-item list-group-item-action bg-light ">
-                    <i class="fas fa-download"></i> Descargar</a>
-                <a href="seleccion_Usuario.html" class="list-group-item list-group-item-action bg-light">
-                    <i class="fas fa-sign-out-alt"></i> Salir</a>
 
+                <!-- Consultar fecha de vacunacion -->
+                <a href="#" class="list-group-item list-group-item-action bg-light  disabled font-weight-bolder">
+                    <div class="row">
+                        <div class="col-2"><i class="fas fa-question"></i></div>
+                        <div class="col-10">Consultar Turno de Vacunación</div>
+                    </div>
+                </a>
+                <!-- Cambio de turno
+            <a href="#" class="list-group-item list-group-item-action bg-light">
+                <div class="row">
+                <div class="col-2"><i class="fas fa-file-signature"></i></div>
+                <div class="col-10">Solicitar cambio de turno</div>
+                </div>
+            </a>-->
+
+                <!-- Registrar Personal de vacunación -->
+                <a href="#" class="list-group-item list-group-item-action bg-light ">
+                    <div class="row">
+                        <div class="col-2"><i class="fas fa-download"></i></div>
+                        <div class="col-10">Descargar</div>
+                    </div>
+                </a>
+                <!-- Salir -->
+                <a href="#" class="list-group-item list-group-item-action bg-light">
+                    <div class="row">
+                        <div class="col-2"><i class="fas fa-sign-out-alt"></i></div>
+                        <div class="col-10">Salir</div>
+                    </div>
+                </a>
             </div>
         </div>
+
         <!-- /#sidebar-wrapper -->
 
         <!-- Page Content -->
