--- a/Seleccion_Personal.html
+++ b/Seleccion_Personal.html
@@ -45,7 +45,7 @@
         </div>
 
         <!--Boton Personal Salud -->
-        <a href="RegistroPM.html" style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-5 justify-content-center d-none d-sm-flex ">
+        <a href="form-medico.html" style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-5 justify-content-center d-none d-sm-flex ">
             <div class="col-6 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button type="button " class="btn btn-secondary boton1 ">
@@ -59,7 +59,7 @@
             </div>
         </a>
 
-        <a href="RegistroPM.html" style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-5 justify-content-center d-flex d-sm-none ">
+        <a href="form-adulto.html" style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-5 justify-content-center d-flex d-sm-none ">
             <div class="col-11 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button type="button " class="btn btn-secondary boton1 ">
@@ -74,7 +74,7 @@
         </a>
 
         <!--Boton Militar-->
-        <a href="ReporteML.html" style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-3 justify-content-center d-none d-sm-flex ">
+        <a href="form-militar.html" style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-3 justify-content-center d-none d-sm-flex ">
             <div class="col-6 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button type="button " class="btn btn-secondary boton1 ">
@@ -88,7 +88,7 @@
             </div>
         </a>
 
-        <a href="RegistroML.html" style="text-decoration:none " class="row boton-inicial btn-group btn-group-sm mx-5 mt-3 justify-content-center d-flex d-sm-none ">
+        <a href="form-militar.html" style="text-decoration:none " class="row boton-inicial btn-group btn-group-sm mx-5 mt-3 justify-content-center d-flex d-sm-none ">
             <div class="col-11 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button href="# " type="button " class="btn btn-secondary boton1 ">
