--- a/form-medico.html
+++ b/form-medico.html
@@ -67,14 +67,6 @@
                     <div class="col-10">Consultar fecha de Vacunación</div>
                     </div>
                 </a>
-                <!-- Cambio de turno
-                <a href="#" class="list-group-item list-group-item-action bg-light">
-                    <div class="row">
-                    <div class="col-2"><i class="fas fa-file-signature"></i></div>
-                    <div class="col-10">Solicitar cambio de turno</div>
-                    </div>
-                </a>-->
-
                 <!-- Registrar Personal de vacunación -->
                 <a href="#" class="list-group-item list-group-item-action bg-light disabled font-weight-bolder">
                     <div class="row">
@@ -82,6 +74,13 @@
                     <div class="col-10">Registrar personal de vacunación</div>
                     </div>
                 </a>
+                <!-- Asignar Personal de vacunacion-->
+                <a href="#" class="list-group-item list-group-item-action bg-light">
+                    <div class="row">
+                    <div class="col-2"><i class="fas fa-edit"></i></div>
+                    <div class="col-10">Asignar personal de vacunación</div>
+                    </div>
+                </a>                
                 <!-- Salir -->
                 <a href="#" class="list-group-item list-group-item-action bg-light">
                     <div class="row">
