--- a/form-medico.html
+++ b/form-medico.html
@@ -137,8 +137,8 @@
                 <div class="col-12">
                     <!-- cabecera -->
                     <div class="row mt-4 border-bottom">
-                        <h3 class="font-weight-bold d-none d-sm-flex "> Registro de Militar </h3>
-                        <h4 class="font-weight-bold d-flex d-sm-none "> Registro de Militar </h4>
+                        <h3 class="font-weight-bold d-none d-sm-flex "> Registro de Personal Médico </h3>
+                        <h4 class="font-weight-bold d-flex d-sm-none "> Registro de Personal Médico </h4>
                     </div>
                     <!-- Formulario -->
                     <!-- Fila 1 -->
@@ -208,10 +208,10 @@
                         </div>
                         <div class="col-5 mr-2">
                             <div class="row">
-                                   <p>Número de carnet militar: </p>
+                                   <p>Código de colegiatura: </p>
                             </div>
                             <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="Número carnet militar"
+                                <input type="text" class="form-control form-control-lg" placeholder="Código de colegiatura"
                                 aria-describedby="inputGroupPrepend1"required>
                             </div>
                         </div>                        
@@ -224,8 +224,8 @@
                 <a href="#" class="btn btn-lg btn-primary">
                     <i class="fas fa-edit"></i> Registrar</i> </a>
 
-                <a href="profile-medico.html" class="btn btn-lg btn-secondary">
-                    <i class="fas fa-window-close"></i> Cancelar </a>
+                <a href="profile-militar.html" class="btn btn-lg btn-secondary">
+                    <i class="fas fa-window-close"></i>Cancelar</a>
                
             </div>
         </div>
