--- a/form-medico.html
+++ b/form-medico.html
@@ -199,10 +199,10 @@
                     <div class="row mt-5 mb-5">
                         <div class="col-5 mr-2">
                             <div class="row">
-                                   <p>Número de celular: </p>
+                                   <p>Número de teléfono o celular: </p>
                             </div>
                             <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="Número de celular"
+                                <input type="text" class="form-control form-control-lg" placeholder="Número de teléfono o celular"
                                 aria-describedby="inputGroupPrepend1"required>
                             </div>
                         </div>
