--- a/login-adulto.html
+++ b/login-adulto.html
@@ -104,14 +104,14 @@
                             <div class="invalid-feedback">Proporcione un número de celular válido</div>       
                     </div>
                 </div>
-                <!-- Botones-->
+
                 <div class="form-row text-center mb-3 justify-content-between align-items-center mt-5">
                     <div class="col">
-                        <a href="form-adulto.html" class="btn btn-lg btn-primary ml-auto" type="submit"> <i class="fas fa-sign-in-alt"></i>
-                            Ingresar</a>
+                        <button class="btn btn-lg btn-primary ml-auto" type="submit"> <i class="fas fa-sign-in-alt"></i>
+                            Ingresar</button>
                     </div>
                     <div class="col">
-                        <a href="home.html" class="btn btn-lg btn-secondary ml-auto">
+                        <a href="Seleccion_Personal.html" class="btn btn-lg btn-secondary ml-auto">
                             <i class="fas fa-window-close"></i> Cancelar</a>
                     </div>
                 </div>
