--- a/login-medico.html
+++ b/login-medico.html
@@ -97,18 +97,18 @@
                 <div class="form-row mt-4">
                     <div class="col">
                             <input type="text" id="" pattern="[0-9]{8}" class="form-control form-control-lg"
-                                placeholder="Número de celular" aria-describedby="inputGroupPrepend4" required>
-                            <small id="dniHelp" class="form-text text-muted">El código de institución debe contener como máximo 8
+                                placeholder="Número de Colegiatura" aria-describedby="inputGroupPrepend4" required>
+                            <small id="dniHelp" class="form-text text-muted">El número de colegiatura debe contener como máximo 8
                                 caracteres</small>
                             <div class="valid-feedback">¡Correcto!</div>
-                            <div class="invalid-feedback">Proporcione un código de institución válido</div>       
+                            <div class="invalid-feedback">Proporcione un número de colegiatura válido</div>       
                     </div>
                 </div>
 
                 <div class="form-row text-center mb-3 justify-content-between align-items-center mt-5">
                     <div class="col">
-                        <a href="report-medico.html" class="btn btn-lg btn-primary ml-auto" type="submit"> <i class="fas fa-sign-in-alt"></i>
-                            Ingresar</a>
+                        <button class="btn btn-lg btn-primary ml-auto" type="submit"> <i class="fas fa-sign-in-alt"></i>
+                            Ingresar</button>
                     </div>
                     <div class="col">
                         <a href="home.html" class="btn btn-lg btn-secondary ml-auto">
