correccion color menu

--- a/login-medico.html
+++ b/login-medico.html
@@ -97,8 +97,8 @@
                 <div class="form-row mt-4">
                     <div class="col">
                             <input type="text" id="" pattern="[0-9]{8}" class="form-control form-control-lg"
-                                placeholder="Número de Colegiatura" aria-describedby="inputGroupPrepend4" required>
-                            <small id="dniHelp" class="form-text text-muted">El número de colegiatura debe contener como máximo 8
+                                placeholder="Código de Colegiatura" aria-describedby="inputGroupPrepend4" required>
+                            <small id="dniHelp" class="form-text text-muted">El código de colegiatura debe contener como máximo 8
                                 caracteres</small>
                             <div class="valid-feedback">¡Correcto!</div>
                             <div class="invalid-feedback">Proporcione un número de colegiatura válido</div>       
