--- a/form-medico.html
+++ b/form-medico.html
@@ -65,14 +65,14 @@
                             </div>
                         </a>
                         <!-- Registrar personal médico -->
-                        <a href="#" class="list-group-item list-group-item-action bg-secondary collapse" id="navbarToggleRegistrar">
+                        <a href="#" class="list-group-item list-group-item-action bg-light collapse" id="navbarToggleRegistrar">
                             <div class="row">
                                 <div class="col-2"><i class="fas fa-user-plus"></i></div>
                                 <div class="col-10">Registrar personal médico</div>
                             </div>
                         </a>
                         <!-- Registrar personal médico -->
-                        <a href="#" class="list-group-item list-group-item-action bg-secondary collapse" id="navbarToggleRegistrar">
+                        <a href="#" class="list-group-item list-group-item-action bg-light collapse" id="navbarToggleRegistrar">
                             <div class="row">
                                 <div class="col-2"><i class="fas fa-user-plus"></i></div>
                                 <div class="col-10">Registrar personal militar</div>
