--- a/report-medico.html
+++ b/report-medico.html
@@ -59,19 +59,12 @@
                         <div class="col-10">Consultar Turno de Vacunación</div>
                     </div>
                 </a>
-                <!-- Cambio de turno
-            <a href="#" class="list-group-item list-group-item-action bg-light">
-                <div class="row">
-                <div class="col-2"><i class="fas fa-file-signature"></i></div>
-                <div class="col-10">Solicitar cambio de turno</div>
-                </div>
-            </a>-->
 
-                <!-- Registrar Personal de vacunación -->
+                <!-- Información personal y turnos -->
                 <a href="#" class="list-group-item list-group-item-action bg-light ">
                     <div class="row">
-                        <div class="col-2"><i class="fas fa-download"></i></div>
-                        <div class="col-10">Descargar</div>
+                        <div class="col-2"><i class="fas fa-id-card"></i></div>
+                        <div class="col-10">Información personal y turnos</div>
                     </div>
                 </a>
                 <!-- Salir -->
